# tech-coach-stat

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: tests.yml
config/: config.py  dynaconf_hooks.py  settings.toml
src/functions/: __init__.py  _versions_bucket.py  _versions_pathlib.py  config.py  file_abstraction.py  query.py  ssbplatforms.py  timeit.py  versions.py
src/notebooks/: a_collect_data.py  b_kildomat.py  b_kildomat_local.py  c_pre_inndata_to_inndata.py  collect_data.py  d_create_eimerdb_altinn.py  d_create_eimerdb_simple.py  d_prepare_edit.py  e_create_eimerdb_altinn.py  e_create_eimerdb_simple.py  f_to_eimerdb.py  imports.py  kildomat.py  kildomat_local.py  run_all.py
src/schemas/: __init__.py  observation_schemas.py  weather_station_schemas.py
tests/: __init__.py  check_naming_standard.py  conftest.py  test_a_collect_data.py  test_c_pre_inndata_to_inndata.py  test_collect_data.py  test_config.py  test_file_abstraction.py  test_file_abstraction_directory.py  test_kildomat.py  test_query.py  test_ssbplatforms.py  test_versions.py  test_versions_get_latest_bucket.py  test_versions_get_latest_pathlib.py
tests/testdata/: observations_inndata.parquet  observations_p2011_v1.json  observations_pre_inndata.parquet  sources_v1.json  weather_stations_inndata_v1.parquet  weather_stations_pre_inndata_v1.parquet  weather_stations_v1.json
